--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
     <GridLayout
         android:id="@+id/GridLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -36,44 +36,33 @@
         android:orientation="horizontal"
         android:padding="0dp"
         android:rowCount="6" >
-
-    <Button
-        android:id="@+id/Clean"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:background="#454141"
-        android:text="C"
-        android:textSize="50dp"
-        android:textColor="#FF0000"
-        android:onClick="Clean"
-        />
     <Button
         android:id="@+id/Divide"
         android:layout_margin="2dp"
         android:background="#454141"
         android:text="/"
         android:textSize="50dp"
-        android:textColor="#FF0000"
-        android:onClick="Division"/>
+        android:textColor="#FF0000"/>
+
     <Button
         android:id="@+id/Multiplica"
         android:layout_margin="2dp"
         android:background="#454141"
         android:text="x"
         android:textSize="50dp"
-        android:textColor="#FF0000"
-        android:onClick="Multiplicacion"/>
+        android:textColor="#FF0000"/>
+
 
         <Button
             android:id="@+id/Borrar"
             android:layout_width="140dp"
+            android:layout_columnSpan="2"
             android:layout_gravity="fill"
             android:layout_margin="3dp"
             android:background="#454141"
             android:text="BORRAR"
             android:textColor="#FF0000"
-            android:textSize="30dp"
-            android:onClick="Borrar"/>
+            android:textSize="30dp"/>
 
         <Button
         android:id="@+id/Siete"
@@ -82,7 +71,7 @@
         android:text="7"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Siete"
+
             />
     <Button
         android:id="@+id/Ocho"
@@ -91,7 +80,7 @@
         android:text="8"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Ocho"
+
         />
     <Button
         android:id="@+id/Nueve"
@@ -100,7 +89,7 @@
         android:text="9"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Nueve"
+
         />
     <Button
         android:id="@+id/Restar"
@@ -111,7 +100,7 @@
         android:text="-"
         android:textColor="#FF0000"
         android:textSize="50dp"
-        android:onClick="Restar"
+
         />
     <Button
         android:id="@+id/Cuatro"
@@ -120,7 +109,7 @@
         android:text="4"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Cuatro"
+
         />
     <Button
         android:id="@+id/Cinco"
@@ -129,7 +118,7 @@
         android:text="5"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Cinco"
+
         />
     <Button
         android:id="@+id/Seis"
@@ -138,7 +127,7 @@
         android:text="6"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Seis"
+
         />
     <Button
         android:id="@+id/Sumar"
@@ -149,7 +138,7 @@
         android:text="+"
         android:textColor="#FF0000"
         android:textSize="50dp"
-        android:onClick="Sumar"
+
         />
     <Button
         android:id="@+id/Uno"
@@ -158,7 +147,7 @@
         android:text="1"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Uno"
+
         />
     <Button
         android:id="@+id/Dos"
@@ -167,7 +156,7 @@
         android:text="2"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Dos"
+
         />
     <Button
         android:id="@+id/Tres"
@@ -176,7 +165,7 @@
         android:text="3"
         android:textSize="50dp"
         android:textColor="#FF0000"
-        android:onClick="Tres"
+
         />
     <Button
         android:id="@+id/Igual"
@@ -188,7 +177,7 @@
         android:text="="
         android:textColor="#FF0000"
         android:textSize="50dp"
-        android:onClick="Igual"
+
         />
     <Button
         android:id="@+id/Cero"
@@ -199,7 +188,7 @@
         android:text="0"
         android:textColor="#FF0000"
         android:textSize="50dp"
-        android:onClick="Cero"
+
         />
     <Button
         android:id="@+id/Punto"
@@ -209,7 +198,7 @@
         android:enabled="true"
         android:textColor="#FF0000"
         android:textSize="50dp"
-        android:onClick="Punto"
+
         />
 </GridLayout>
 </RelativeLayout>
